# tiny-retry

./: .gitignore  README.md  pyproject.toml
tests/: test_retry.py
tiny_retry/: __init__.py  retry.py
